--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "@vueuse/core": "^13.6.0",
     "element-plus": "^2.4.3",
     "pinia": "^2.1.7",
+    "use-element-plus-theme": "^0.0.5",
+    "vant": "^4.9.21",
     "vue": "^3.4.38",
+    "vue-i18n": "^11.1.11",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
