--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
     "@vueuse/core": "^13.6.0",
+    "axios": "^1.11.0",
     "element-plus": "^2.4.3",
     "pinia": "^2.1.7",
     "use-element-plus-theme": "^0.0.5",
